fixed nav button centering on mobile layout

--- a/css/brentktech.css
+++ b/css/brentktech.css
@@ -26,6 +26,7 @@ padding-bottom: 5px;
 position: -webkit-sticky;
 position: sticky;
 top: 0;
+text-align: center;
 }
 #home_nav,
 #portfolio_nav,
